--- a/people.html
+++ b/people.html
@@ -65,19 +65,19 @@
                 <ul class="people-row">
                     <li>
                         <div class="person">
-                            <img src="images/people/오박사.png" width="200">
+                            <img src="images/people/okido.png" width="200">
                             <h2>오박사</h2>
                         </div>
                     </li>
                     <li>
                         <div class="person">
-                            <img src="images/people/로켓단.png" width="200">
+                            <img src="images/people/rocket.png" width="200">
                             <h2>로켓단</h2>
                         </div>
                     </li>
                     <li>
                         <div class="person">
-                            <img src="images/people/지우엄마.png" width="200">
+                            <img src="images/people/mom.png" width="200">
                             <h2>지우엄마</h2>
                         </div>
                     </li>
@@ -85,19 +85,19 @@
                 <ul class="people-row">
                     <li>
                         <div class="person">
-                            <img src="images/people/단델.png" width="200">
+                            <img src="images/people/dante.png" width="200">
                             <h2>단델</h2>
                         </div>
                     </li>
                     <li>
                         <div class="person">
-                            <img src="images/people/소니아.png" width="200">
+                            <img src="images/people/sonia.png" width="200">
                             <h2>소니아</h2>
                         </div>
                     </li>
                     <li>
                         <div class="person">
-                            <img src="images/people/스마트로토무.png" width="200">
+                            <img src="images/people/smartrotom.png" width="200">
                             <h2>스마트 로토무</h2>
                         </div>
                     </li>
@@ -105,19 +105,19 @@
                 <ul class="people-row">
                     <li>
                         <div class="person">
-                            <img src="images/people/고우와에이스번.png" width="200">
+                            <img src="images/people/go.png" width="200">
                             <h2>고우와 에이스번</h2>
                         </div>
                     </li>
                     <li>
                         <div class="person">
-                            <img src="images/people/채박사.png" width="200">
+                            <img src="images/people/choi.png" width="200">
                             <h2>채박사</h2>
                         </div>
                     </li>
                     <li>
                         <div class="person">
-                            <img src="images/people/채박사조수.png" width="200">
+                            <img src="images/people/choi2.png" width="200">
                             <h2>채박사 조수</h2>
                         </div>
                     </li>
@@ -126,19 +126,19 @@
                 <ul class="people-row">
                     <li>
                         <div class="person">
-                            <img src="images/people/하루.png" width="200">
+                            <img src="images/people/haru.png" width="200">
                             <h2>하루</h2>
                         </div>
                     </li>
                     <li>
                         <div class="person">
-                            <img src="images/people/여경.png" width="200">
+                            <img src="images/people/police.png" width="200">
                             <h2>여경</h2>
                         </div>
                     </li>
                     <li>
                         <div class="person">
-                            <img src="images/people/간호순.png" width="200">
+                            <img src="images/people/ganhosun.png" width="200">
                             <h2>간호순</h2>
                         </div>
                     </li>
