--- a/index.html
+++ b/index.html
@@ -27,31 +27,31 @@
 
             <ul class="headerBtns">
                 <li>
-                    <a class="headerBtn" id="story" href="/pokemon-web-site/story.html">
+                    <a class="headerBtn" id="story" href="./story.html">
                         <img src="images/icon/story-normal.png" alt="">
                         <img src="images/icon/story-hover.png " alt="">
                     </a>
                 </li>
                 <li>
-                    <a class="headerBtn" id="people" href="/pokemon-web-site/people.html">
+                    <a class="headerBtn" id="people" href="./people.html">
                         <img src="images/icon/people-normal.png" alt="">
                         <img src="images/icon/people-hover.png" alt="">
                     </a>
                 </li>
                 <li>
-                    <a class="headerBtn" id="game" href="/pokemon-web-site/game.html">
+                    <a class="headerBtn" id="game" href="./game.html">
                         <img src="images/icon/game-normal.png" alt="">
                         <img src="images/icon/game-hover.png" alt="">
                     </a>
                 </li>
                 <li>
-                    <a class="headerBtn" id="goods" href="/pokemon-web-site/goods.html">
+                    <a class="headerBtn" id="goods" href="./goods.html">
                         <img src="images/icon/goods-normal.png" alt="">
                         <img src="images/icon/goods-hover.png" alt="">
                     </a>
                 </li>
                 <li>
-                    <a class="headerBtn" id="video" href="/pokemon-web-site/video.html">
+                    <a class="headerBtn" id="video" href="./video.html">
                         <img src="images/icon/video-normal.png" alt="">
                         <img src="images/icon/video-hover.png" alt="">
                     </a>
