--- a/story.html
+++ b/story.html
@@ -26,31 +26,31 @@
             </div>
             <ul class="headerBtns">
                 <li>
-                    <a class="headerBtn" id="story" href="/story.html">
+                    <a class="headerBtn" id="story" href="./story.html">
                         <img src="images/icon/story-normal.png" alt="">
                         <img src="images/icon/story-hover.png " alt="">
                     </a>
                 </li>
                 <li>
-                    <a class="headerBtn" id="people" href="/people.html">
+                    <a class="headerBtn" id="people" href="./people.html">
                         <img src="images/icon/people-normal.png" alt="">
                         <img src="images/icon/people-hover.png" alt="">
                     </a>
                 </li>
                 <li>
-                    <a class="headerBtn" id="game" href="/game.html">
+                    <a class="headerBtn" id="game" href="./game.html">
                         <img src="images/icon/game-normal.png" alt="">
                         <img src="images/icon/game-hover.png" alt="">
                     </a>
                 </li>
                 <li>
-                    <a class="headerBtn" id="goods" href="/goods.html">
+                    <a class="headerBtn" id="goods" href="./goods.html">
                         <img src="images/icon/goods-normal.png" alt="">
                         <img src="images/icon/goods-hover.png" alt="">
                     </a>
                 </li>
                 <li>
-                    <a class="headerBtn" id="video" href="/video.html">
+                    <a class="headerBtn" id="video" href="./video.html">
                         <img src="images/icon/video-normal.png" alt="">
                         <img src="images/icon/video-hover.png" alt="">
                     </a>
@@ -96,13 +96,13 @@
                     <br>
                     지우는 포켓몬스터 애니메이션 시리즈의 주인공이다. 풀네임은 한지우이다. <br>
                     <br>
-                    <img src="/images/story/story-character-main.png" width="500">
+                    <img src="images/story/story-character-main.png" width="500">
                     <br>
                     <a name="story3"></a>
                     <h1>역사</h1>
                     <strong>포켓몬스터의 역사는 1995년 4월 27일에 시작되어 마침내 25년만에 우승을 맞이했다.</strong>
                     <br>
-                    <img src="/images/story/story-history.jpg" width="500">
+                    <img src="images/story/story-history.jpg" width="500">
                     <br>
                     <br>
                     <br>
