--- a/game.html
+++ b/game.html
@@ -26,31 +26,31 @@
             </div>
             <ul class="headerBtns">
                 <li>
-                    <a class="headerBtn" id="story" href="/story.html">
+                    <a class="headerBtn" id="story" href="./story.html">
                         <img src="images/icon/story-normal.png" alt="">
                         <img src="images/icon/story-hover.png " alt="">
                     </a>
                 </li>
                 <li>
-                    <a class="headerBtn" id="people"  href="/people.html">
+                    <a class="headerBtn" id="people"  href="./people.html">
                         <img src="images/icon/people-normal.png" alt="">
                         <img src="images/icon/people-hover.png" alt="">
                     </a>
                 </li>
                 <li>
-                    <a class="headerBtn" id="game"  href="/game.html">
+                    <a class="headerBtn" id="game"  href="./game.html">
                         <img src="images/icon/game-normal.png" alt="">
                         <img src="images/icon/game-hover.png" alt="">
                     </a>
                 </li>
                 <li>
-                    <a class="headerBtn" id="goods"  href="/goods.html">
+                    <a class="headerBtn" id="goods"  href="./goods.html">
                         <img src="images/icon/goods-normal.png" alt="">
                         <img src="images/icon/goods-hover.png" alt="">
                     </a>
                 </li>
                 <li>
-                    <a class="headerBtn" id="video"  href="/video.html">
+                    <a class="headerBtn" id="video"  href="./video.html">
                         <img src="images/icon/video-normal.png" alt="">
                         <img src="images/icon/video-hover.png" alt="">
                     </a>
@@ -63,21 +63,21 @@
 
             <div class="game-wrapper">
                 <div class="game">
-                    <img src="/images/game/game-scvi.jpg" width="500">
+                    <img src="images/game/game-scvi.jpg" width="500">
                     <div class="game-text">
                         <h2>포켓몬스터스칼렛・바이올렛</h2>
                         <p>포켓몬스터 시리즈</p>
                     </div>
                 </div>
                 <div class="game">
-                    <img src="/images/game/game-bdsp.jpg" width="500">
+                    <img src="images/game/game-bdsp.jpg" width="500">
                     <div class="game-text">
                         <h2>포켓몬스터 브릴리언트 다이아몬드・샤이닝 펄</h2>
                         <p>포켓몬스터 시리즈</p>
                     </div>
                 </div>
                 <div class="game">
-                    <img src="/images/game/game-swsh.jpg" width="500">
+                    <img src="images/game/game-swsh.jpg" width="500">
                     <div class="game-text">
                         <h2>포켓몬스터소드・실드</h2>
                         <p>포켓몬스터 시리즈</p>
