--- a/goods.html
+++ b/goods.html
@@ -26,31 +26,31 @@
             </div>
             <ul class="headerBtns">
                 <li>
-                    <a class="headerBtn" id="story" href="/story.html">
+                    <a class="headerBtn" id="story" href="./story.html">
                         <img src="images/icon/story-normal.png" alt="">
                         <img src="images/icon/story-hover.png " alt="">
                     </a>
                 </li>
                 <li>
-                    <a class="headerBtn" id="people"  href="/people.html">
+                    <a class="headerBtn" id="people"  href="./people.html">
                         <img src="images/icon/people-normal.png" alt="">
                         <img src="images/icon/people-hover.png" alt="">
                     </a>
                 </li>
                 <li>
-                    <a class="headerBtn" id="game"  href="/game.html">
+                    <a class="headerBtn" id="game"  href="./game.html">
                         <img src="images/icon/game-normal.png" alt="">
                         <img src="images/icon/game-hover.png" alt="">
                     </a>
                 </li>
                 <li>
-                    <a class="headerBtn" id="goods"  href="/goods.html">
+                    <a class="headerBtn" id="goods"  href="./goods.html">
                         <img src="images/icon/goods-normal.png" alt="">
                         <img src="images/icon/goods-hover.png" alt="">
                     </a>
                 </li>
                 <li>
-                    <a class="headerBtn" id="video"  href="/video.html">
+                    <a class="headerBtn" id="video"  href="./video.html">
                         <img src="images/icon/video-normal.png" alt="">
                         <img src="images/icon/video-hover.png" alt="">
                     </a>
@@ -62,7 +62,7 @@
             <div class="goods-wrapper">
 
                 <div class="item">
-                    <img src="/images/goods/goods-1.jpg" height="300">
+                    <img src="images/goods/goods-1.jpg" height="300">
                     <div class="text">
                         <h1>
                             뉴에라 포켓몬 후드티
@@ -73,7 +73,7 @@
                     </div>
                 </div>
                 <div class="item">
-                    <img src="/images/goods/goods-2.jpg" height="300">
+                    <img src="images/goods/goods-2.jpg" height="300">
                     <div class="text">
                         <h1>
                             포켓몬스터 스티커 컬러링북 
@@ -84,7 +84,7 @@
                     </div>
                 </div>
                 <div class="item">
-                    <img src="/images/goods/goods-3.jpg" height="300">
+                    <img src="images/goods/goods-3.jpg" height="300">
                     <div class="text">
                         <h1>
                             포켓몬스터 타워 플레이트 세트
@@ -95,7 +95,7 @@
                     </div>
                 </div>
                 <div class="item">
-                    <img src="/images/goods/goods-4.jpg" height="300">
+                    <img src="images/goods/goods-4.jpg" height="300">
                     <div class="text">
                         <h1>
                             포켓몬스터 캐치 몬스터볼 디아루가
@@ -106,7 +106,7 @@
                     </div>
                 </div>
                 <div class="item">
-                    <img src="/images/goods/goods-5.jpg" height="300">
+                    <img src="images/goods/goods-5.jpg" height="300">
                     <div class="text">
                         <h1>
                             포켓몬스터 캐치 몬스터볼 펄기아
@@ -117,7 +117,7 @@
                     </div>
                 </div>
                 <div class="item">
-                    <img src="/images/goods/goods-6.jpg" height="300">
+                    <img src="images/goods/goods-6.jpg" height="300">
                     <div class="text">
                         <h1>
                             포켓몬 태엽 피규어
@@ -128,7 +128,7 @@
                     </div>
                 </div>
                 <div class="item">
-                    <img src="/images/goods/goods-7.jpg" height="300">
+                    <img src="images/goods/goods-7.jpg" height="300">
                     <div class="text">
                         <h1>
                             포켓몬스터 본재 인형
@@ -139,7 +139,7 @@
                     </div>
                 </div>
                 <div class="item">
-                    <img src="/images/goods/goods-8.jpg" height="300">
+                    <img src="images/goods/goods-8.jpg" height="300">
                     <div class="text">
                         <h1>
                             포켓몬스터W 거다이맥스 소장판 2탄
@@ -150,7 +150,7 @@
                     </div>
                 </div>
                 <div class="item">
-                    <img src="/images/goods/goods-9.jpg" height="300">
+                    <img src="images/goods/goods-9.jpg" height="300">
                     <div class="text">
                         <h1>
                             포켓몬 캠핑체어
